Fix text-inputs 1px layout shift on :focus

--- a/resources/css/core/utilities.css
+++ b/resources/css/core/utilities.css
@@ -7,7 +7,7 @@
 }
 
 .focus-outline {
-    @apply border-blue-300;
+    @apply border border-blue-200;
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(0,125,255,.25);
 }
